--- a/To-Do/css/style.css
+++ b/To-Do/css/style.css
@@ -1,5 +1,9 @@
 body {
   font-family: "Nunito Sans", sans-serif !important;
+}
+
+.app-container {
+  margin-top: 5%;
   width: 414px;
   height: 736px;
   overflow: hidden;
@@ -7,6 +11,8 @@ body {
   background-repeat: no-repeat;
   background-position: top;
   background-size: auto;
+  border-radius: 20px;
+  box-shadow: 5px 5px 15px #707070;
 }
 
 h1 {
@@ -126,14 +132,14 @@ h3 {
 
 .todo-record-text h2 {
   width: min-content;
-  max-width: 300px;
+  max-width: 280px;
   white-space: nowrap;
   overflow: hidden !important;
   text-overflow: ellipsis;
 }
 
 .todo-record-text h3 {
-  width: 300px;
+  width: 280px;
   white-space: nowrap;
   overflow: hidden !important;
   text-overflow: ellipsis;
@@ -159,7 +165,7 @@ h3 {
 .todo-checked .todo-checkbox {
   background-color: #9e00ff !important;
   border: 4px solid #8b00e1;
-  background-image: url(../images/Check/checked.png);
+  background-image: url('../images/Check/checked.png');
   background-position: center;
   background-repeat: no-repeat;
   background-size: 13px 13px;
@@ -193,24 +199,62 @@ h3 {
   animation-fill-mode: forwards;
 }
 
-.todo-add-container {
-  position: absolute;
+.todo-container-add {
+  display: none;
+  position: relative;
+  bottom: 298px;
   width: 414px;
-  height: 298px;
-  top: 438px;
-  padding: 22px;
-  background-color: white;
+  height: 298px ;
+  border-radius: 20px;
+  box-shadow: 0px -50px 100px 20px rgba(0, 0, 0, 0.4);
+  background-color: #00000030;
 }
 
-.todo-add-backgorund {
-  position: absolute;
-  width: 414px;
-  height: 439px;
-  left: 0px;
-  bottom: 297px;
-  background: rgba(0, 0, 0, 0.3);
-  box-shadow: inset 0px -100px 100px -90px rgba(0, 0, 0, 0.9);
+@keyframes openModal {
+  from {
+    height: 0;
+    bottom: -298px;
+  }
+
+  to {
+    bottom: 298px;
+    height: 298px;
+  }
 }
+
+.todo-container-add.show {
+  display: block !important;
+  animation-duration: 1s;
+  animation-name: openModal;
+}
+
+.todo-add {
+  display: flex;
+  position: absolute;
+  bottom: 0;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 298px;
+  width: 100%;
+  background-color: white;
+  border: 1px solid;
+  border-radius: 20px;
+}
+
+.index-back {
+  z-index: -1 !important;
+}
+
+.add-background {
+  position: absolute;
+  width: inherit;
+  height: inherit;
+  background: rgba(0, 0, 0, 0.3);
+  transition: 2s;
+  border-radius: 20px;
+}
+
 
 .todo-form-title {
   width: 367px;
@@ -288,6 +332,9 @@ h3 {
   display: flex;
   position: absolute;
   margin-left: 114px;
+  color: white;
+  font-size: 20px;
+  line-height: 20px;
 }
 
 .todo-create-text {
@@ -301,4 +348,14 @@ h3 {
   line-height: 27px;
   text-align: center;
   color: #ffffff;
+}
+
+.todo-list-none {
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  vertical-align: middle;
+  margin-top: 50%;
 }
